# bmstu-smtp

./: CMakeLists.txt
smtp-client/: CMakeLists.txt  main.c
smtp-common/: CMakeLists.txt  defines.h  destruction.c  error.c  error.h  helpers.c  helpers.h  log.c  log.h  queue_msg.h
smtp-server/: CMakeLists.txt  config.c  config.h  data.h  defines.h  destruction.c  destruction.h  error.c  error.h  main.c  parse.c  parse.h  protocol.c  protocol.h  server-fsm.c  server-fsm.h  server.cfg  server.def  smtp.c  smtp.h
smtp-server-test/: CMakeLists.txt  main.c  parse_test.c  parse_test.h
